[gd_scene load_steps=13 format=2]

[ext_resource path="res://graphics/bootloader/logo.png" type="Texture" id=1]
[ext_resource path="res://src/Boot.gd" type="Script" id=2]
[ext_resource path="res://src/boot/DriverContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/boot/LoginContainer.gd" type="Script" id=4]
[ext_resource path="res://src/boot/Drivers.gd" type="Script" id=5]
[ext_resource path="res://src/boot/DriverSettings.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 1, 1, 1, 1 )
thickness = 2

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
thickness = 2
vertical = true

[sub_resource type="Theme" id=3]
HSeparator/styles/separator = SubResource( 1 )
VSeparator/styles/separator = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0.545098, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Boot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 576 )
theme = SubResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="PC"]
margin_right = 1024.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="PC/HB"]
margin_right = 506.0
margin_bottom = 576.0
size_flags_horizontal = 3

[node name="VB" type="VBoxContainer" parent="PC/HB/VB"]
margin_right = 506.0
margin_bottom = 188.0
size_flags_vertical = 3
custom_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="PC/HB/VB/VB"]
margin_right = 506.0
margin_bottom = 128.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PC/HB/VB/VB/HBoxContainer"]
margin_left = 112.0
margin_top = 48.0
margin_right = 262.0
margin_bottom = 79.0
text = "Supreme Dev OS
AMANAS BOOTLOADER"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="PC/HB/VB/VB/HBoxContainer"]
margin_left = 266.0
margin_right = 394.0
margin_bottom = 128.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Label" type="Label" parent="PC/HB/VB/VB"]
margin_top = 152.0
margin_right = 506.0
margin_bottom = 183.0
text = "Welcome ever-faithful Pantheon employee!
Please input your employee ID to service this device:"
align = 1
valign = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="PC/HB/VB"]
margin_top = 192.0
margin_right = 506.0
margin_bottom = 196.0

[node name="LeftTab" type="TabContainer" parent="PC/HB/VB"]
margin_top = 200.0
margin_right = 506.0
margin_bottom = 576.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/panel = SubResource( 5 )
tabs_visible = false

[node name="LoginContainer" type="VBoxContainer" parent="PC/HB/VB/LeftTab"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12
alignment = 1
script = ExtResource( 4 )

[node name="EmployeeHB" type="HBoxContainer" parent="PC/HB/VB/LeftTab/LoginContainer"]
margin_top = 114.0
margin_right = 506.0
margin_bottom = 138.0
alignment = 1

[node name="Label" type="Label" parent="PC/HB/VB/LeftTab/LoginContainer/EmployeeHB"]
margin_left = 123.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 19.0
rect_min_size = Vector2( 128, 0 )
text = "EMPLOYEE ID:"
align = 1

[node name="LineEdit" type="LineEdit" parent="PC/HB/VB/LeftTab/LoginContainer/EmployeeHB"]
margin_left = 255.0
margin_right = 383.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )

[node name="PasswordHB" type="HBoxContainer" parent="PC/HB/VB/LeftTab/LoginContainer"]
margin_top = 150.0
margin_right = 506.0
margin_bottom = 174.0
alignment = 1

[node name="Label" type="Label" parent="PC/HB/VB/LeftTab/LoginContainer/PasswordHB"]
margin_left = 123.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 19.0
rect_min_size = Vector2( 128, 0 )
text = "PASSWORD:"
align = 1

[node name="LineEdit" type="LineEdit" parent="PC/HB/VB/LeftTab/LoginContainer/PasswordHB"]
margin_left = 255.0
margin_right = 383.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
secret = true

[node name="LoginButton" type="Button" parent="PC/HB/VB/LeftTab/LoginContainer"]
margin_left = 172.0
margin_top = 186.0
margin_right = 333.0
margin_bottom = 206.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4
text = "Certify bootloader login"

[node name="Label" type="Label" parent="PC/HB/VB/LeftTab/LoginContainer"]
margin_top = 218.0
margin_right = 506.0
margin_bottom = 249.0
text = "DISCLAIMER: If you are not a Pantheon Employee
 please press `R` to resume the boot sequence."
align = 1
valign = 1
autowrap = true

[node name="Control" type="Control" parent="PC/HB/VB/LeftTab/LoginContainer"]
margin_top = 261.0
margin_right = 506.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FailureLabel" type="Label" parent="PC/HB/VB/LeftTab/LoginContainer/Control"]
margin_top = 12.0
margin_right = 506.0
margin_bottom = 43.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Login failed!
ID and/or password was incorrect"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DriversList" type="ScrollContainer" parent="PC/HB/VB/LeftTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
script = ExtResource( 5 )

[node name="VB" type="VBoxContainer" parent="PC/HB/VB/LeftTab/DriversList"]
margin_right = 506.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="DriverContainer4" parent="PC/HB/VB/LeftTab/DriversList/VB" instance=ExtResource( 3 )]
margin_top = 40.0
margin_right = 506.0
margin_bottom = 136.0

[node name="DriverContainer5" parent="PC/HB/VB/LeftTab/DriversList/VB" instance=ExtResource( 3 )]
margin_top = 140.0
margin_right = 506.0
margin_bottom = 236.0

[node name="DriverContainer6" parent="PC/HB/VB/LeftTab/DriversList/VB" instance=ExtResource( 3 )]
margin_top = 240.0
margin_right = 506.0
margin_bottom = 336.0

[node name="VSeparator" type="VSeparator" parent="PC/HB"]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 576.0

[node name="RightTab" type="TabContainer" parent="PC/HB"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 6 )
tabs_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PC/HB/RightTab"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "No driver selected!"
align = 1
valign = 1

[node name="DriverSettings" parent="PC/HB/RightTab" instance=ExtResource( 6 )]
visible = false
